# photo-metadata-extractor

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.amd  Dockerfile.web  README.md  docker-compose.yml  photo-metadata-extractor.bat  photo-metadata-extractor.ps1  photo-metadata-extractor.sh  pyproject.toml  start.bat  start.ps1  start.sh
.github/workflows/: docker-publish.yml
docs/: examples-en.md  examples-ru.md  guide-en.md  guide-ru.md
src/: config.py  csv_writer.py  main.py  pipeline.py  scanner.py  schemas.py  web.py
src/models/: __init__.py  base.py  color_extractor.py  content_classifier.py  quantize.py
src/templates/: index.html  photo.html
