[project]
name = "photo-metadata-extractor"
version = "1.0.0"
description = "Extract photo metadata using NPU-accelerated models"
requires-python = ">=3.12"
dependencies = [
    "onnxruntime>=1.19.0",
    "opencv-python-headless>=4.10.0",
    "numpy>=1.26.0,<2.0.0",
    "scikit-learn>=1.5.0",
    "Pillow>=10.4.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
    "webcolors>=24.8.0",
]

[project.optional-dependencies]
intel = [
    "onnxruntime-openvino>=1.19.0",
]
quantize = [
    "onnxruntime>=1.19.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
photo-extract = "src.main:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"
